[gd_scene load_steps=8 format=3 uid="uid://dkuwcntbn4jl2"]

[ext_resource type="Script" path="res://scripts/car.gd" id="1_318nw"]
[ext_resource type="PackedScene" uid="uid://bmwh6n8gr4wvd" path="res://scenes/ui_scenes/car_ui.tscn" id="2_1w8et"]
[ext_resource type="PackedScene" uid="uid://cu6oq4whbnukt" path="res://scenes/ui_scenes/pause_menu.tscn" id="3_8ffs4"]

[sub_resource type="BoxMesh" id="BoxMesh_ibdse"]

[sub_resource type="BoxShape3D" id="BoxShape3D_cw1sq"]
size = Vector3(1.5, 0.5, 3)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_8x4io"]
albedo_color = Color(0, 0, 0, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_i3uql"]
material = SubResource("StandardMaterial3D_8x4io")
height = 0.25

[node name="Car" type="VehicleBody3D"]
mass = 50.0
center_of_mass_mode = 1
center_of_mass = Vector3(0, 0, 0.3)
script = ExtResource("1_318nw")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1.5, 0, 0, 0, 0.5, 0, 0, 0, 3.9, 0, 0, 0)
mesh = SubResource("BoxMesh_ibdse")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("BoxShape3D_cw1sq")

[node name="FrontLeftWheel" type="VehicleWheel3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0, 1.1538)
use_as_steering = true
wheel_roll_influence = 0.3
suspension_stiffness = 50.0
damping_compression = 3.0
damping_relaxation = 5.0

[node name="MeshInstance3D" type="MeshInstance3D" parent="FrontLeftWheel"]
transform = Transform3D(2.98023e-08, 1, 0, -1, 2.98023e-08, 0, 0, 0, 1, 0, 0, 0)
mesh = SubResource("CylinderMesh_i3uql")

[node name="BackLeftWheel" type="VehicleWheel3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0, -1.154)
use_as_traction = true
wheel_roll_influence = 0.3
suspension_stiffness = 50.0
damping_compression = 3.0
damping_relaxation = 5.0

[node name="MeshInstance3D" type="MeshInstance3D" parent="BackLeftWheel"]
transform = Transform3D(2.98023e-08, 1, 0, -1, 2.98023e-08, 0, 0, 0, 1, 0, 0, 0)
mesh = SubResource("CylinderMesh_i3uql")

[node name="FrontRightWheel" type="VehicleWheel3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 0, 1.1538)
use_as_steering = true
wheel_roll_influence = 0.3
suspension_stiffness = 50.0
damping_compression = 3.0
damping_relaxation = 5.0

[node name="MeshInstance3D" type="MeshInstance3D" parent="FrontRightWheel"]
transform = Transform3D(2.98023e-08, 1, 0, -1, 2.98023e-08, 0, 0, 0, 1, 0, 0, 0)
mesh = SubResource("CylinderMesh_i3uql")

[node name="BackRightWheel" type="VehicleWheel3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 0, -1.154)
use_as_traction = true
wheel_roll_influence = 0.3
suspension_stiffness = 50.0
damping_compression = 3.0
damping_relaxation = 5.0

[node name="MeshInstance3D" type="MeshInstance3D" parent="BackRightWheel"]
transform = Transform3D(2.98023e-08, 1, 0, -1, 2.98023e-08, 0, 0, 0, 1, 0, 0, 0)
mesh = SubResource("CylinderMesh_i3uql")

[node name="Cameras" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.3)

[node name="FrontCamera" type="Camera3D" parent="Cameras"]
transform = Transform3D(-1, -3.19744e-14, -8.74228e-08, -2.26267e-08, 0.965926, 0.258819, 8.44439e-08, 0.258819, -0.965926, 0, 1, -4)
current = true

[node name="ReverseCamera" type="Camera3D" parent="Cameras"]
transform = Transform3D(1, -2.26267e-08, 1.71867e-07, -2.26267e-08, 0.965926, 0.258819, -1.71867e-07, -0.258819, 0.965926, 0, 1, 3)

[node name="RayCast3D" type="RayCast3D" parent="."]
target_position = Vector3(0, -2, 0)
collision_mask = 2
debug_shape_thickness = 5

[node name="Ui" parent="." instance=ExtResource("2_1w8et")]

[node name="PauseMenu" parent="." instance=ExtResource("3_8ffs4")]
visible = false
